--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <div class="carta" id="carta">
+            <div class="sobre"></div>
             <div class="texto-abre">💌 Ábreme 💌</div>
-            <img src="carta-cerrada.png" alt="Carta Cerrada" id="imagenCarta">
         </div>
 
         <div class="contenido-carta" id="contenidoCarta">
@@ -21,6 +21,7 @@
                 Como un sueño eterno, <br>
                 en tu amor me pierdo. 💕
             </p>
+            <img src="flor.png" alt="Flor" class="flor">
             <div class="corazon">❤️</div>
         </div>
     </div>
